--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
   "compilerOptions": {
+
     "target": "es5",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "./",
+    "paths": {
+      "*": ["src/*"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
